// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination component Next button should be disabled 1`] = `
<DocumentFragment>
  <nav
    aria-label="pagination"
    class="pagination"
  >
    <ul
      class="pagination-list"
    >
      <li
        class="previous"
      >
        <a
          aria-disabled="false"
          class=""
          role="button"
          tabindex="0"
        />
      </li>
      <li>
        <a
          aria-label="Page 1"
          class="pagination-link"
          role="button"
          tabindex="0"
        >
          1
        </a>
      </li>
      <li>
        <a
          aria-label="Page 2"
          class="pagination-link"
          role="button"
          tabindex="0"
        >
          2
        </a>
      </li>
      <li>
        <a
          aria-label="Page 3"
          class="pagination-link"
          role="button"
          tabindex="0"
        >
          3
        </a>
      </li>
      <li
        class="next"
      >
        <a
          aria-disabled="false"
          class=""
          role="button"
          tabindex="0"
        />
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Pagination component should have 3 pages and page 1 active 1`] = `
<DocumentFragment>
  <nav
    aria-label="pagination"
    class="pagination"
  >
    <ul
      class="pagination-list"
    >
      <li
        class="previous"
      >
        <a
          aria-disabled="false"
          class=""
          role="button"
          tabindex="0"
        />
      </li>
      <li>
        <a
          aria-label="Page 1"
          class="pagination-link"
          role="button"
          tabindex="0"
        >
          1
        </a>
      </li>
      <li
        class="active"
      >
        <a
          aria-current="page"
          aria-label="Page 2 is your current page"
          class="pagination-link is-current"
          role="button"
          tabindex="0"
        >
          2
        </a>
      </li>
      <li>
        <a
          aria-label="Page 3"
          class="pagination-link"
          role="button"
          tabindex="0"
        >
          3
        </a>
      </li>
      <li
        class="next"
      >
        <a
          aria-disabled="false"
          class=""
          role="button"
          tabindex="0"
        />
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Pagination component should have 5 pages, page 5 active and display pages 3 to 5 1`] = `
<DocumentFragment>
  <nav
    aria-label="pagination"
    class="pagination"
  >
    <ul
      class="pagination-list"
    >
      <li
        class="previous"
      >
        <a
          aria-disabled="false"
          class=""
          role="button"
          tabindex="0"
        />
      </li>
      <li>
        <a
          aria-label="Page 1"
          class="pagination-link"
          role="button"
          tabindex="0"
        >
          1
        </a>
      </li>
      <li>
        <a
          aria-label="Page 2"
          class="pagination-link"
          role="button"
          tabindex="0"
        >
          2
        </a>
      </li>
      <li>
        <a
          aria-label="Page 3"
          class="pagination-link"
          role="button"
          tabindex="0"
        >
          3
        </a>
      </li>
      <li>
        <a
          aria-label="Page 4"
          class="pagination-link"
          role="button"
          tabindex="0"
        >
          4
        </a>
      </li>
      <li>
        <a
          aria-label="Page 5"
          class="pagination-link"
          role="button"
          tabindex="0"
        >
          5
        </a>
      </li>
      <li
        class="next"
      >
        <a
          aria-disabled="false"
          class=""
          role="button"
          tabindex="0"
        />
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Pagination component should not display Previous/Next buttons 1`] = `
<DocumentFragment>
  <nav
    aria-label="pagination"
    class="pagination"
  >
    <ul
      class="pagination-list"
    >
      <li
        class="previous"
      >
        <a
          aria-disabled="false"
          class=""
          role="button"
          tabindex="0"
        />
      </li>
      <li>
        <a
          aria-label="Page 1"
          class="pagination-link"
          role="button"
          tabindex="0"
        >
          1
        </a>
      </li>
      <li>
        <a
          aria-label="Page 2"
          class="pagination-link"
          role="button"
          tabindex="0"
        >
          2
        </a>
      </li>
      <li
        class="active"
      >
        <a
          aria-current="page"
          aria-label="Page 3 is your current page"
          class="pagination-link is-current"
          role="button"
          tabindex="0"
        >
          3
        </a>
      </li>
      <li>
        <a
          aria-label="Page 4"
          class="pagination-link"
          role="button"
          tabindex="0"
        >
          4
        </a>
      </li>
      <li>
        <a
          aria-label="Page 5"
          class="pagination-link"
          role="button"
          tabindex="0"
        >
          5
        </a>
      </li>
      <li
        class="next"
      >
        <a
          aria-disabled="false"
          class=""
          role="button"
          tabindex="0"
        />
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Pagination component should not display page numbers 1`] = `
<DocumentFragment>
  <nav
    aria-label="pagination"
    class="pagination"
  >
    <ul
      class="pagination-list"
    >
      <li
        class="previous"
      >
        <a
          aria-disabled="false"
          class="pagination-previous"
          role="button"
          tabindex="0"
        >
          Previous
        </a>
      </li>
      <li>
        <a
          aria-label="Page 1"
          class="pagination-link"
          role="button"
          tabindex="0"
        >
          1
        </a>
      </li>
      <li>
        <a
          aria-label="Page 2"
          class="pagination-link"
          role="button"
          tabindex="0"
        >
          2
        </a>
      </li>
      <li
        class="break"
      >
        <a
          class="pagination-ellipsis"
          role="button"
          tabindex="0"
        >
          ...
        </a>
      </li>
      <li>
        <a
          aria-label="Page 4"
          class="pagination-link"
          role="button"
          tabindex="0"
        >
          4
        </a>
      </li>
      <li>
        <a
          aria-label="Page 5"
          class="pagination-link"
          role="button"
          tabindex="0"
        >
          5
        </a>
      </li>
      <li
        class="next"
      >
        <a
          aria-disabled="false"
          class="pagination-next"
          role="button"
          tabindex="0"
        >
          Next
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Pagination component should not render if current page is greater than total pages 1`] = `
<DocumentFragment>
  <nav
    aria-label="pagination"
    class="pagination"
  >
    <ul
      class="pagination-list"
    >
      <li
        class="previous"
      >
        <a
          aria-disabled="false"
          class=""
          role="button"
          tabindex="0"
        />
      </li>
      <li>
        <a
          aria-label="Page 1"
          class="pagination-link"
          role="button"
          tabindex="0"
        >
          1
        </a>
      </li>
      <li>
        <a
          aria-label="Page 2"
          class="pagination-link"
          role="button"
          tabindex="0"
        >
          2
        </a>
      </li>
      <li
        class="next"
      >
        <a
          aria-disabled="false"
          class=""
          role="button"
          tabindex="0"
        />
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Pagination component should not render if total pages equals 1 1`] = `
<DocumentFragment>
  <nav
    aria-label="pagination"
    class="pagination"
  >
    <ul
      class="pagination-list"
    >
      <li
        class="previous"
      >
        <a
          aria-disabled="false"
          class=""
          role="button"
          tabindex="0"
        />
      </li>
      <li>
        <a
          aria-label="Page 1"
          class="pagination-link"
          role="button"
          tabindex="0"
        >
          1
        </a>
      </li>
      <li
        class="next"
      >
        <a
          aria-disabled="false"
          class=""
          role="button"
          tabindex="0"
        />
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;
